--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "autoprefixer": "^10.2.1",
     "firebase": "^8.4.2",
+    "firebaseui": "^4.8.0",
     "next": "^10.0.0",
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-firebaseui": "^5.0.2",
     "react-transition-group": "^4.4.1",
     "tailwindcss": "^2.0.2"
   },
