--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.1",
+    "axios": "^0.21.1",
     "firebase": "^8.4.2",
     "firebaseui": "^4.8.0",
     "next": "^10.0.0",
