--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "learn-starter",
+  "jest": {
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testPathIgnorePatterns": [
+      "<rootDir>/lib/resources"
+    ]
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
@@ -21,9 +30,10 @@
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/node": "^14.14.21",
     "@types/react": "^17.0.0",
-    "jest": "^26.6.3",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.1.3"
   }
 }
