--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/qrcode": "^1.4.0",
     "autoprefixer": "^10.2.1",
     "axios": "^0.21.1",
     "firebase": "^8.4.2",
     "firebaseui": "^4.8.0",
     "next": "^10.0.0",
     "postcss": "^8.2.4",
+    "qrcode.react": "^1.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-firebaseui": "^5.0.2",
